--- a/plant_tracker/src/main/res/layout/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/layout_individual_plant.xml
@@ -42,7 +42,7 @@
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/materialcolorpicker__white">
+            android:background="@color/white">
 
             <TableRow
                 android:layout_width="match_parent"
