--- a/plant_tracker/src/main/res/layout/activity_image_series_viewer.xml
+++ b/plant_tracker/src/main/res/layout/activity_image_series_viewer.xml
@@ -4,7 +4,7 @@
     android:id="@+id/imageViewLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/materialcolorpicker__black"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <ImageView
