--- a/plant_tracker/src/main/res/values/colors.xml
+++ b/plant_tracker/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#FF3F51B5</color>
     <color name="colorPrimaryDark">#669900</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="colorPrimaryDarkWithAlpha">#6a669900</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
