--- a/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
+++ b/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
@@ -49,10 +49,10 @@
                 android:id="@+id/nav_export"
                 android:icon="@drawable/ic_export"
                 android:title="@string/drawer_item_export" />
-            <!--<item-->
-                <!--android:id="@+id/nav_import"-->
-                <!--android:icon="@drawable/ic_import"-->
-                <!--android:title="@string/drawer_item_import" />-->
+            <item
+                android:id="@+id/nav_import"
+                android:icon="@drawable/ic_import"
+                android:title="@string/drawer_item_import" />
         </menu>
     </item>
 
