--- a/plant_tracker/src/main/res/xml/provider_paths.xml
+++ b/plant_tracker/src/main/res/xml/provider_paths.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <files-path name="plants/"/>
-    <external-path name="my_images" path="Android/data/com.nonsense.planttracker.debug/files/Pictures" />
-    <external-path name="old_images" path="Android/data/com.nonsense.planttracker.debug/files/camera" />
-
+    <external-path name="pt_images" path="Android/data/com.nonsense.planttracker/files/camera" />
 </paths>
