--- a/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
+++ b/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/dateTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
@@ -49,7 +49,7 @@
 
         <TextView
             android:id="@+id/recordableSummaryTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingEnd="16dp"
