Some more performance work with the individual plant view. Reduced the load initial load time by reducing the visible record tiles, lots of time was being spent inflating many records. Attempt to increase scroll speed for records which have yet to be drawn, the jank is real!

--- a/plant_tracker/src/main/res/layout/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/layout_individual_plant.xml
@@ -273,6 +273,8 @@
         android:elevation="9dp"
         android:padding="5dp"
         android:scrollbars="vertical"
-        android:stackFromBottom="true" />
+        android:stackFromBottom="true"
+        android:scrollingCache="false"
+        android:animationCache="false"/>
 
 </LinearLayout>
