--- a/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
+++ b/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
@@ -14,7 +14,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="5dp">
 
         <TextView
             android:id="@+id/observEventTypeTextView"
@@ -25,10 +27,10 @@
             android:background="@drawable/rounded_corner"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
-            android:text="@string/record_template"
-            android:textColor="@color/white"
             android:shadowColor="@color/black"
             android:shadowRadius="100"
+            android:text="@string/record_template"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
 
